Name:           snm 
Version:	0.0.1
Cabal-Version:  >= 1.2
License:	GPL-3
License-File:   COPYING	
Author:		John Morrice
Category:	Documentation
Synopsis:       The Simple Nice-Looking Manual Generator. 
Build-type:	Simple
Homepage:	http://github.com/elginer/snm

Library
   Build-Depends: base>=4, parsec>=3, filepath, directory, containers, HsSyck, spoonutil, safe, xhtml
   Exposed-modules:
      Data.Yaml.Simple
      Manual.Structure
      Manual.Reader
      Manual.Emit
      Manual.Emit.Text
      Manual.Emit.XHTML
      Manual

Executable snm
   Main-is: bin/snm.hs
   Build-Depends: base>=4, parsec>=3, filepath, directory, containers, HsSyck, spoonutil, safe
   Other-modules:
      Data.Yaml.Simple
      Manual.Structure
      Manual.Reader
      Manual.Emit
      Manual
